Fix: Arreglar el overflow de las columnas de una tabla y del modal

--- a/src/components/SmModal/SmModal.scss
+++ b/src/components/SmModal/SmModal.scss
@@ -9,7 +9,7 @@
 }
 
 .sm-modal-body {
-  @apply overflow-y-auto overflow-x-hidden p-4;
+  @apply p-4;
 }
 
 .sm-modal-content {
