--- a/src/components/SmTable/SmTable.scss
+++ b/src/components/SmTable/SmTable.scss
@@ -7,15 +7,18 @@
     }
     &-th,
     &-td {
-      @apply min-w-[110px] whitespace-nowrap;
-      @apply text-ellipsis overflow-hidden;
       @apply px-2 py-4 text-xs text-left;
       @apply border-b-[0.5px];
+      @apply min-w-[110px];
+      @apply whitespace-nowrap text-ellipsis overflow-x-hidden;
       &.right {
         @apply text-right;
       }
       &.center {
         @apply text-center;
+      }
+      &.actions {
+        @apply overflow-visible;
       }
     }
     &-th {
